update usage